# leptos-webgpu-editor

./: CLAUDE.md  Cargo.toml  REQUIREMENTS.md  Trunk.toml
notes/: time_to_first_load.md
notes/performance_optimizations/: README.md  cache_manager.rs  deferred_init.rs  serve.rs
src/: fast_text_input.rs  input_buffer.rs  main.rs  text_input.rs
src/gpu/: fast_text.rs  mod.rs  square.rs  text.rs
src/gpu/context/: mod.rs
src/gpu/pipeline/: mod.rs
src/gpu/shaders/: mod.rs
src/gpu/utils/: mod.rs
