[package]
name = "leptos-webgpu-editor"
version = "0.1.0"
edition = "2024"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wgpu = { version = "0.20", features = ["webgl"] }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.dev]
opt-level = 0          # no optimizations
debug = true           # full debug info
incremental = true     # enable incremental builds
codegen-units = 16     # more parallel codegen
overflow-checks = false

[dependencies]
leptos = { version = "0.8.3", default-features = false, features = ["csr"] }
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
fontdue = "0.8"
sdf_glyph_renderer = "1.0.2"

[dependencies.web-sys]
version = "0.3.77"
default-features = false
features = [
  "Window",
  "Document",
  "Element",
  "Node",
  "EventTarget",
  "HtmlElement",
  "HtmlCanvasElement",
  "console",
  "Navigator",
  "Gpu",
  "GpuAdapter",
  "GpuDevice",
  "GpuCanvasContext",
  "GpuCanvasConfiguration",
  "GpuTexture",
  "GpuTextureFormat",
  "GpuTextureDescriptor",
  "GpuTextureView",
  "GpuTexelCopyBufferLayout",
  "GpuTexelCopyTextureInfo",
  "GpuSampler",
  "GpuMipmapFilterMode",
  "GpuSamplerDescriptor",
  "GpuBindGroup",
  "GpuBindGroupDescriptor",
  "GpuBindGroupLayout",
  "GpuBindGroupLayoutDescriptor",
  "GpuBindGroupLayoutEntry",
  "GpuBindGroupEntry",
  "GpuBlendComponent",
  "GpuBlendState",
  "GpuBlendFactor",
  "GpuBlendOperation",
  "GpuShaderModule",
  "GpuShaderModuleDescriptor",
  "GpuRenderPipeline",
  "GpuRenderPipelineDescriptor",
  "GpuCommandEncoder",
  "GpuRenderPassEncoder",
  "GpuRenderPassDescriptor",
  "GpuRenderPassColorAttachment",
  "GpuQueue",
  "GpuExtent3dDict",
  "GpuCopyExternalImageDestInfo",
  "GpuCopyExternalImageSourceInfo",
  "GpuFilterMode",
  "GpuTextureBindingLayout",
  "GpuSamplerBindingLayout",
  "GpuPipelineLayoutDescriptor",
  "GpuVertexState",
  "GpuFragmentState",
  "GpuColorTargetState",
  "GpuColorDict",
  "GpuLoadOp",
  "GpuStoreOp",
  "gpu_texture_usage",
  "GpuPrimitiveState",
  "GpuPrimitiveTopology",
  "GpuPipelineLayout",
  "GpuCommandBuffer",
  "gpu_shader_stage",
  "GpuVertexAttribute",
  "GpuVertexFormat",
  "GpuVertexBufferLayout",
  "GpuVertexStepMode",
  "GpuBuffer",
  "GpuBufferDescriptor",
  "gpu_buffer_usage",
]